fix menu button alignment

--- a/src/components/ids-button/ids-button.scss
+++ b/src/components/ids-button/ids-button.scss
@@ -102,6 +102,8 @@ button {
   }
 
   &:not(.formatter-width-percentage) {
+    justify-content: center;
+
     .ids-icon {
       @include absolute();
 
